# stepik-user-rights-in-linux

./: .gitignore  README.md  Vagrantfile  ansible.cfg  main.py  play.yml  pyproject.toml
group_vars/: all.yml
roles/access-control/: README.md
roles/access-control/defaults/: main.yml
roles/access-control/handlers/: main.yml
roles/access-control/tasks/: main.yml
roles/access-control/tests/: test.yml
roles/access-control/vars/: main.yml
roles/audit/: README.md
roles/audit/defaults/: main.yml
roles/audit/handlers/: main.yml
roles/audit/tasks/: main.yml
roles/audit/tests/: test.yml
roles/audit/vars/: main.yml
roles/config-nginx/: README.md
roles/config-nginx/defaults/: main.yml
roles/config-nginx/handlers/: main.yml
roles/config-nginx/tasks/: main.yml
roles/config-nginx/templates/: index.html.j2  nginx.config.j2
roles/config-nginx/tests/: test.yml
roles/config-nginx/vars/: main.yml
roles/prepare-server/: README.md
roles/prepare-server/defaults/: main.yml
roles/prepare-server/handlers/: main.yml
roles/prepare-server/tasks/: main.yml
roles/prepare-server/tests/: test.yml
roles/prepare-server/vars/: main.yml
roles/result/: README.md
roles/result/defaults/: main.yml
roles/result/tasks/: main.yml  (+4 more)
roles/ssh/: README.md
roles/umask/: README.md
roles/user-roles-config/: README.md
roles/users-and-groups/: README.md
shared-dir/scripts/: 10-prepare-server.sh  20-setup-user.sh  30-access-controll.sh  40-install-nginx.sh  50-user-roles-config.sh  60-config-umask.sh  70-audit-config.sh  80-ssh-config.sh  main.sh  set-vars.sh
(+24 files in other folders)
